# tzEnc2

./: .gitignore  .pylintrc  .treeignore  Frakenstein.tzenc  Frankenstein.txt  LICENSE  README.md  SimpleTest.tzenc  benchmark_results.csv  pyproject.toml  real_benchmark_results.csv  requirements-dev.txt  requirements.txt  tasks.py  test.txt  test.tzenc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
assets/: character_chunks_256a.pkl
config/: config.json
docs/: Advanced-Topics.md  Concepts.md  Getting-Started.md  Home.md  Introduction.md  Usage.md
src/tzEnc2/: __init__.py  benchmark.py  benchmark2.py  benchmark3.py  config.py  constants.py  function_profiler.py  gradio_tzenc.py  grid.py  log_config.py  main.py  tzenc_cli.py
